<resources>
    <string name="app_name">In Da House</string>
    <string name="in_da_house_logo_content_desc">είναι το logo για την εφαρμογή</string>
    <string name="login_label">Σύνδεση</string>
    <string name="input_email_hint">E-mail</string>
    <string name="input_password_hint">Κωδικός</string>
    <string name="forgot_password_label">Ξέχασες τον κωδικό σου;</string>
    <string name="login_button_label">Σύνδεση</string>
    <string name="create_new_account_label">Δημιουργησε καινούργιο λογαριασμό</string>
    <string name="email_is_not_valid">Δεν είναι σωστό το email</string>
    <string name="password_must_be_greater_than_8">Ο κωδικός πρέπει να είναι μεγαλύτερος απο 8 γράμματα</string>
    <string name="please_wait_while_login">Παρακαλώ περιμένετε μέχρι να γίνει σύδνεση…</string>
    <string name="connection_is_successful">Επιτυχείς σύνδεση</string>
    <string name="register_label">Εγγραφή</string>
    <string name="input_confirm_password">Επιβεβαίωση κωδικού</string>
    <string name="register_button_label">Εγγραφή</string>
    <string name="already_have_account_label">Έχω ήδη λογαριασμό</string>
    <string name="password_did_not_match">Ο κωδικός δεν αντιστοιχεί με τον παραπάνω</string>
    <string name="please_wait_while_registration">Παρακαλώ περιμένετε μέχρι να γίνει η εγγραφή…</string>
    <string name="registration_is_successful">Επιτυχείς εγγραφή</string>
    <string name="registration_is_failed">Αποτυχία εγγραφής</string>
    <string name="input_reset_email_label">Βάλτε το e-mail που θέλετε να κάνετε ανάκτηση κωδικού</string>
    <string name="reset_label">Αποστολη</string>
    <string name="wrong_email_input">Λάθος e-mail</string>
    <string name="please_check_your_email">Παρακαλώ ελέγξτε το e-mail σας</string>
    <string name="reset_email_not_sended">Το e-mail επαναφοράς κωδικου δεν εστάλει</string>
    <string name="btn_save_label">Αποθήκευση</string>
    <string name="setup_profile_title">Επεξεργασία πληροφοριών</string>
    <string name="username_is_not_valid">Το όνομα δεν ειναι έγκυρο</string>
    <string name="street_is_not_valid">Η οδός δεν ειναι έγκυρη</string>
    <string name="floor_is_not_valid">Η όροφος δεν ειναι έγκυρος</string>
    <string name="please_select_image_setup">Επιλέξτε εικόνα</string>
    <string name="adding_setup_profile">Προσθήκη στοιχείων προφίλ</string>
    <string name="street_label">Διεύθυνση</string>
    <string name="floor_label">Όροφος</string>
    <string name="username_label">ονοματεπώνυμο</string>
    <string name="area_delivery_boy_label">Περιοχή εργασίας</string>
    <string name="profession_delivery_boy" translatable="false">delivery_boy</string>
    <string name="setup_complete_msg">Επιτυχής ολοκλήρωση αποθήκευσης δεδομενων</string>
    <string name="error_uploading_image">Υπήρξε πρόβλημα στο ανέβασμα της εικόνας</string>
    <string name="alert_dialog_title">Παρακαλώ επιλέξτε φωτογραφία μικρότερη απο 2mb</string>
    <string name="alert_dialog_yes">OK</string>
    <string name="alert_dialog_no">Άκυρο</string>
    <string name="time_ago_label" translatable="false">0 time Ago</string>
    <string name="product_name_label">Αυτό ειναι το όνοπα προϊοντος</string>
    <string name="category_name_label">Αυτό ειναι το όνοπα κατηγορίας</string>
    <string name="extra_name_label">Αυτό ειναι το όνοπα κατηγορίας</string>
    <string name="product_disc_label">"Αυτή είναι η περιγραφή προϊόντος"</string>
    <string name="category_disc_label">"Αυτή είναι η περιγραφή "</string>
    <string name="logout_title">Αποσύνδεση</string>
    <string name="home_title">Κεντρική</string>
    <string name="profile_title">Επεξεργασία προφίλ</string>
    <string name="admin_title">Διαχείριση</string>
    <string name="input_name">Όνομα</string>
    <string name="input_street">Οδός</string>
    <string name="input_floor">Όροφος</string>
    <string name="btn_update_label">Αποθήκευση</string>
    <string name="notification_sended_to_token">Στάλθηκε ειδοποίηση</string>
    <string name="ask_for_delivery_boy">Θέλω έναν ντελιβερά</string>
    <string name="ask_for_delivery_boy_at_street">στην οδό: </string>
    <string name="ask_for_delivery_boy_at_area"> στην περιοχη:</string>
    <string name="post_added_successful">Επιτυχής προσθήκη</string>
    <string name="profession_label" translatable="false">profession</string>
    <string name="are_you_sure_to_delete_post_label">Είστε σίγουροι ότι θέλετε να το διαγράψετε;</string>
    <string name="delete_label">Διαγραφή</string>
    <string name="dialog_yes">Ναι</string>
    <string name="dialog_no">Οχι</string>
    <string name="notification_send_to_shop">Έρχομαι</string>
    <string name="send_notification_label">Αποστολή ειδοποίησης σε</string>
    <string name="send_notification_yes_label">Αποστολή</string>
    <string name="send_notification_cancel_label">Άκυρο</string>
    <string name="send_notification_comment_text_hint">Σχόλιο</string>
    <string name="on_my_way_label">ΕΡΧΟΜΑΙ</string>
    <string name="complete_label">ΟΛΟΚΛΗΡΩΘΗΚΕ</string>
    <string name="status_online">Ενεργός</string>
    <string name="status_offline">Ανενεργός</string>
    <string name="the_user">Ο χρήστης</string>
    <string name="is_currently">είναι πλέον</string>
    <string name="there_is_no_online_delivery">Δεν υπάρχει διαθέσιμος ντελιβερας αυτη τη στιγμή</string>
    <string name="dialog_no_online_ok">Δεν βιάζομαι</string>
    <string name="price_label">1.80€</string>
    <string name="ref_users">Users</string>
    <string name="ref_products">Products</string>
    <string name="ref_category">Categories</string>
    <string name="ref_extra">Extras</string>
    <string name="ref_profileImage">ProfileImage</string>
    <string name="ref_users_profileImage">profileImage</string>
    <string name="ref_users_username">username</string>
    <string name="ref_users_street">street</string>
    <string name="ref_users_floor">floor</string>
    <string name="ref_category_image_url">categoryImageUrl</string>
    <string name="ref_category_desc">categoryDesc</string>
    <string name="ref_category_name">categoryName</string>
    <string name="ref_category_id">categoryId</string>
    <string name="ref_category_position">categoryPosition</string>
    <string name="ref_product_id">productId</string>
    <string name="ref_product_name">productName</string>
    <string name="ref_product_price">productPrice</string>
    <string name="ref_product_category_id">productCategoryId</string>
    <string name="ref_extra_id">extraId</string>
    <string name="ref_extra_name">extraName</string>
    <string name="ref_extra_price">extraPrice</string>
    <string name="category_admin_label">Κατηγορίες</string>
    <string name="product_admin_label">Προϊόντα</string>
    <string name="extras_admin_label">Extras</string>
    <string name="category_menu_label">Κατηγορίες</string>
    <string name="product_menu_label">Προϊόντα</string>
    <string name="extras_menu_label">Extras</string>
    <string name="cancel_admin_btn_label">Ακύρωση</string>
    <string name="back_admin_btn_label">Πίσω</string>
    <string name="category_name_textInput_hint">Προσθήκη Ονόματος Κατηγορίας</string>
    <string name="category_disc_textInput_hint">Προσθήκη Περιγραφής Κατηγορίας</string>
    <string name="category_img_url_textInput_hint">Προσθήκη Link για Photo Κατηγορίας</string>
    <string name="successful_edit_of_category">Επιτυχής Ανανέωση Κατηγορίας</string>
    <string name="product_name_textInput_hint">Προσθήκη Ονόματος Προϊόντος</string>
    <string name="product_price_textInput_hint">Προσθήκη Τιμής Προϊόντος</string>
    <string name="product_category_id_textInput_hint">Προσθήκη Κατηγορίας Προϊόντος</string>
    <string name="successful_edit_of_product">Επιτυχής Ανανέωση Κατηγορίας</string>
    <string name="extra_name_textInput_hint">Προσθήκη Ονόματος Extra</string>
    <string name="extra_price_textInput_hint">Προσθήκη Τιμής Extra</string>
    <string name="successful_edit_of_extra">Επιτυχής Ανανέωση Extra</string>
    <string name="successful_add_of_category">Επιτυχής Προσθήκη Κατηγορίας</string>
    <string name="category_admin_add_btn_label">Προσθήκη Κατηγορίας</string>
    <string name="category_admin_add_btn_ok_label">Προσθήκη Νέας Κατηγορίας</string>
    <string name="successful_add_of_product">Επιτυχής Προσθήκη προϊόντος</string>
    <string name="product_admin_add_btn_label">Προσθήκη Προϊόντος</string>
    <string name="product_admin_add_btn_ok_label">Προσθήκη Νέου Προϊόντος</string>
    <string name="successful_add_of_extra">Επιτυχής Προσθήκη extra</string>
    <string name="extra_admin_add_btn_label">Προσθήκη extra</string>
    <string name="extra_admin_add_btn_ok_label">Προσθήκη Νέου extra</string>
    <string name="edit_category_name_textInput_hint">Ανανέωση Ονόματος Κατηγορίας</string>
    <string name="edit_category_disc_textInput_hint">Ανανέωση Περιγραφής Κατηγορίας</string>
    <string name="edit_category_img_url_textInput_hint">Ανανέωση Link για Photo Κατηγορίας</string>
    <string name="edit_successful_add_of_category">Επιτυχής Ανανέωση Κατηγορίας</string>
    <string name="edit_category_admin_add_btn_ok_label">Ανανέωση Κατηγορίας</string>
    <string name="edit_product_name_textInput_hint">Ανανέωση Ονόματος προϊόντος</string>
    <string name="edit_product_price_textInput_hint">Ανανέωση Τιμής προϊόντος</string>
    <string name="edit_product_category_id_textInput_hint">Ανανέωση κατηγορίας που ανηκει το προϊόν</string>
    <string name="edit_successful_add_of_product">Επιτυχής Ανανέωση προϊόντος</string>
    <string name="edit_product_admin_add_btn_ok_label">Ανανέωση προϊόντος</string>
    <string name="edit_extra_name_textInput_hint">Ανανέωση Ονόματος Extra</string>
    <string name="edit_extra_price_textInput_hint">Ανανέωση Τιμής Extra</string>
    <string name="edit_successful_add_of_extra">Επιτυχής Ανανέωση Extra</string>
    <string name="edit_extra_admin_add_btn_ok_label">Ανανέωση Extra</string>
    <string name="name_is_not_valid">Το Όνομα δεν είναι Σωστό</string>
    <string name="desc_is_not_valid">Η περιγραφή δεν είναι Σωστή</string>
    <string name="image_url_is_not_valid">Το Ulr της φωτογραφίας δεν ειναι Σωστό</string>
    <string name="price_is_not_valid">Η τιμή δεν ειναι Σωστή</string>
    <string name="product_category_id_is_not_valid">Δεν επιλέξατε κατηγορία</string>
    <string name="alertdialog_title_image_not_valid_label">Δεν έχετε επιλέξει εικόνα</string>
    <string name="alertdialog_message_image_not_valid_label">Δεν έχετε βάλει καποιο link για εικόνα</string>
    <string name="are_you_sure_to_delete_category_title_label">Προσοχή</string>
    <string name="are_you_sure_to_delete_category_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε την κατηγορία</string>
    <string name="are_you_sure_to_delete_category_items_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε το προϊόν</string>
    <string name="are_you_sure_to_delete_product_from_category_message_label">Υπαρχουν προιόντα στην κατηγορία</string>
    <string name="are_you_sure_to_delete_product_items_message_label">Διαγραφή του προϊόν </string>
    <string name="owns_at_category_name_label">που ανήκει στην κατηγορία</string>
    <string name="are_you_sure_to_delete_product_title_label">Προσοχή</string>
    <string name="are_you_sure_to_delete_product_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε το προϊόν</string>
    <string name="are_you_sure_to_delete_extra_title_label">Προσοχή</string>
    <string name="are_you_sure_to_delete_extra_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε το extra</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>