<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/first">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_title" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile_title" />

        <item
            android:id="@+id/admin"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/profile_title" />


    </group>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout_title" />

</menu>