<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_product_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_textInput_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_product_price_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/new_product_name_layout"
        app:layout_constraintStart_toStartOf="@+id/new_product_name_layout"
        app:layout_constraintTop_toBottomOf="@+id/new_product_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price_textInput_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_product_category_id_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/new_product_price_layout"
        app:layout_constraintStart_toStartOf="@+id/new_product_price_layout"
        app:layout_constraintTop_toBottomOf="@+id/new_product_price_layout">

        <AutoCompleteTextView
            android:id="@+id/new_product_category_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/product_category_id_textInput_hint"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_product_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancel_admin_btn_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_product_category_id_layout" />

    <Button
        android:id="@+id/add_product_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/product_admin_add_btn_ok_label"
        app:layout_constraintBottom_toBottomOf="@+id/add_product_cancel"
        app:layout_constraintEnd_toEndOf="@+id/new_product_category_id_layout"
        app:layout_constraintStart_toEndOf="@+id/add_product_cancel"
        app:layout_constraintTop_toTopOf="@+id/add_product_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>