<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_extra_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_extra_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:hint="@string/extra_name_textInput_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_extra_price_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/new_extra_name_layout"
        app:layout_constraintStart_toStartOf="@+id/new_extra_name_layout"
        app:layout_constraintTop_toBottomOf="@+id/new_extra_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_extra_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:hint="@string/extra_price_textInput_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_extra_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_admin_btn_label"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/new_extra_price_layout"
        app:layout_constraintTop_toBottomOf="@+id/new_extra_price_layout" />

    <Button
        android:id="@+id/add_extra_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/extra_admin_add_btn_ok_label"
        app:layout_constraintBottom_toBottomOf="@+id/add_extra_cancel"
        app:layout_constraintEnd_toEndOf="@+id/new_extra_price_layout"
        app:layout_constraintStart_toEndOf="@+id/add_extra_cancel"
        app:layout_constraintTop_toTopOf="@+id/add_extra_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>